name:                blamesphemy
version:             0.1.0.0
synopsis:            Gradually Typed Haskell (with Blame)
description:         Please see README.md
homepage:            http://github.com/jakzale/blamesphemy#readme
license:             BSD3
license-file:        LICENSE
author:              Jakub Zalewski
maintainer:          Jakub Zalewski <jakzale@gmail.com>
copyright:           Copyright: (c) 2016 Jakub Zalewski
category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.10

library 
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  exposed-modules:
--      Unsafe
--    , Safe
      Blamesphemy

  other-modules:
--      Checker
--    , Any
  build-depends:
      base >= 4.9 && < 5
    , HUnit == 1.3.1.*

